--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -12,4 +12,14 @@ body {
       padding-left: 0;
     }
   }
+
+  &__error {
+    padding: 1em;
+    text-align: center;
+    height: calc(100vh - 16px);
+    background-image: url(/src/assets/images/main/404.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 }
