--- a/src/styles/main/sidebar.scss
+++ b/src/styles/main/sidebar.scss
@@ -21,6 +21,7 @@
       width: 100vw;
 
       & .MuiDrawer-paper {
+        justify-content: space-between;
         width: 100vw;
       }
     }
@@ -67,6 +68,19 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
+      &_clickable {
+        cursor: pointer;
+        &:active {
+          transform: translateY(1px);
+        }
+      }
+    }
+
+    &-button {
+      &.MuiListItemButton-root {
+        padding-left: 0;
+      }
     }
   }
 
