--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
 @import "./main/main.scss";
 @import "./main/sidebar.scss";
 @import "./main/auth.scss";
+@import "./main/home";
+@import "./common/table.scss";
