--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -17,7 +17,7 @@ body {
     padding: 1em;
     text-align: center;
     height: calc(100vh - 16px);
-    background-image: url(/src/assets/images/main/404.svg);
+    background-image: url(/src/assets/images/main/404.images.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
