--- a/src/styles/main/home.scss
+++ b/src/styles/main/home.scss
@@ -14,6 +14,17 @@
     }
   }
 
+  &__cards {
+    &.MuiGrid-container {
+      margin-top: 0;
+    }
+  }
+  &__card {
+    &.MuiCard-root {
+      border-radius: 24px;
+    }
+  }
+
   &__video {
     width: 100%;
     height: 390px;
