--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -1,3 +1,13 @@
+[data-theme='dark'] {
+  --bg-color: rgb(30,30,30);
+}
+[data-theme='light'] {
+  --bg-color: #fff;
+}
+:root {
+  background-color: var(--bg-color);
+}
+
 body {
   margin: 0;
 }
