--- a/src/styles/main/sidebar.scss
+++ b/src/styles/main/sidebar.scss
@@ -30,8 +30,8 @@
   &__fab {
     &.MuiFab-root {
       position: fixed;
-      right: 5%;
-      bottom: 5%;
+      right: 2rem;
+      bottom: 4rem;
       z-index: 1201;
     }
   }
