--- a/src/styles/main/auth.scss
+++ b/src/styles/main/auth.scss
@@ -1,7 +1,7 @@
 .sign-in {
   &__container {
     &.MuiContainer-root {
-      height: 100vh;
+      height: var(--app-height);
       display: flex;
       flex-direction: column;
       justify-content: center;
