--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -1,10 +1,21 @@
+[data-theme='dark'] {
+  --bg-color: rgb(30,30,30);
+}
+[data-theme='light'] {
+  --bg-color: #fff;
+}
+:root {
+  background-color: var(--bg-color);
+  --app-height: 100%;
+}
+
 body {
   margin: 0;
 }
 
 .main {
   &__paper.MuiPaper-root {
-    min-height: 100vh;
+    min-height: var(--app-height);
     padding-left: 56px;
     border-radius: 0;
 
