--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,11 @@
+// MAIN STYLES
 @import "./main/main.scss";
 @import "./main/sidebar.scss";
 @import "./main/auth.scss";
 @import "./main/home";
+// MAIN STYLES END
+
+// COMMON STYLES
 @import "./common/table.scss";
 @import "./common/adsManager.scss";
+// COMMON STYLES END
